--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             transition: all 0.3s ease 0s;
         }
 
+        button:hover {
+            background-color: rgb(34, 34, 39);
+        }
+
         .iframeWrapper {
             border: 2px solid rgb(170, 51, 181); 
             overflow: hidden; 
