[add] media query

--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
         img {
             width: 100px;
         }
+
+        @media screen and (max-width: 768px) {
+            .iframeWrapper {
+                margin: 15px 10px;
+            }
+        }
     </style>
 </head>
 <body>
